@@ -11,3 +11,9 @@ dependencies {
   latestDepTestLibrary("org.jboss.weld.se:weld-se:2.+")
   latestDepTestLibrary("org.jboss.weld.se:weld-se-core:2.+")
 }
+
+tasks.withType<Test>().configureEach {
+  // required on jdk17
+  jvmArgs("--add-opens=java.base/java.lang=ALL-UNNAMED")
+  jvmArgs("-XX:+IgnoreUnrecognizedVMOptions")
+}
